--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Nama    : Athief Naufal Ridhotullah
     </h1>
     <a href="postest1.html">Postest 1</a>
+    <a href="postest2.html">Postest 1</a>
 </body>
 </html>
