--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     </h1>
     <a href="postest1.html">Postest 1</a>
     <a href="postest2.html">Postest 2</a>
+    <a href="postest3.html">Postest 3</a>
 </body>
 </html>
