--- a/profil3.html
+++ b/profil3.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Postest 2</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style3.css">
 </head>
 
 <body>
@@ -23,8 +23,8 @@
 
     <div class = "navbar">
         <a href="postest3.html">Home</a>
-        <a href="produk.html">Product</a>
-        <a href="profil.html">About Me</a>
+        <a href="produk3.html">Product</a>
+        <a href="profil3.html">About Me</a>
         <button onclick="myFunction()">Switch Mode</button>
 
     <div class = "main_content">
