--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
     <h1>Nama    : Athief Naufal Ridhotullah
     </h1>
+    <h1>NIM     : 2009106101
+    </h1>
     <a href="postest1.html">Postest 1</a>
     <a href="postest2.html">Postest 2</a>
     <a href="postest3.html">Postest 3</a>
